--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>caleb ng - architecture and design</title>
+<!-- link to main stylesheet -->
+	<link rel="stylesheet" type="text/css" href="/css/main.css">
 </head>
 <body>
 
