--- a/index.html
+++ b/index.html
@@ -17,22 +17,18 @@
     <div class="container">
       <div class="row">
         <div class="col">
-            <h3>home</h3>
+            <div class="path">users\<em>calebng</em></div>
         </div>
-      </div>
-    </div>
-    
-    <div class="container">
-      <div class="row">
-        <div class="nav">
-          <ul>
-            <li>about</li>
-            <li>contact</li>
-            <li>portfolio</li>
-          </ul>
+        <div class="w-100"></div>
+        <div class="col-2">
+          <nav class="nav flex-column fixed">
+            <li class="nav-item"><a href="pages/about.html" class="nav-link active">about</a></li>
+            <li class="nav-item"><a href="pages/contact.html" class="nav-link active">contact</a></li>
+            <li class="nav-item"><a href="pages/portfolio.html" class="nav-link disabled">portfolio</a></li>
+          </nav>
         </div>
         <div class="col-10">
-          content
+          <div class="copy">caleb is a student of design. he studied <a href="#">architecture</a> at the singapore university of technology of design, but has tried to pursue his interest in <a href="#">graphic design</a> in his free time. he also <a href="#">draws</a> and takes <a href="#">photos</a>.</div>
         </div>
       </div>
     </div>
