really fixed it this time.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
         <div class="w-100"></div>
         <div class="col-sm-12 col-md-2">
-          <nav class="nav fixed">
+          <nav class="nav flex-lg-column fixed">
             <li class="nav-item"><a href="pages/about.html" class="nav-link active">about</a></li>
             <li class="nav-item"><a href="pages/contact.html" class="nav-link active">contact</a></li>
             <li class="nav-item"><a href="pages/portfolio.html" class="nav-link disabled">portfolio</a></li>
