minor aesthetic changes

--- a/contact.html
+++ b/contact.html
@@ -17,19 +17,17 @@
     <div class="container">
       <div class="row">
         <div class="col">
-            <div class="path">users\<em>calebng</em></div>
+            <div class="path">users\<a href="index.html" class="">calebng</a>\<em>contact</em></div>
         </div>
         <div class="w-100"></div>
         <div class="col-sm-12 col-md-2">
           <nav class="nav flex-lg-column fixed">
-            <li class="nav-item"><a href="about.html" class="nav-link active">about</a></li>
-            <li class="nav-item"><a href="contact.html" class="nav-link active">contact</a></li>
-            <li class="nav-item"><a href="portfolio.html" class="nav-link disabled">portfolio</a></li>
+            <li class="nav-item"><a class="nav-link disabled">contact</a></li>
           </nav>
         </div>
         <div class="col-sm-12 col-md-10">
           <div class="copy">
-            <p>caleb is a student of design. he studied <a href="#">architecture</a> at the singapore university of technology of design, but has tried to pursue his interest in <a href="#">graphic design</a> in his free time. he also <a href="#">draws</a> and takes <a href="#">photos</a>.</p>
+            <p>you can find caleb on <a href="instagram.com/calebnjw">instagram</a> mostly, but he recently purged his account. for more formal connections, you can <a href="mailto:calebnjw@outlook.com?Subject=Hello">email</a> him. calling is less ideal. </p>
           </div>
         </div>
       </div>
