--- a/about.html
+++ b/about.html
@@ -17,19 +17,19 @@
     <div class="container">
       <div class="row">
         <div class="col">
-            <div class="path">users\<em>calebng</em></div>
+            <div class="path">users\<a href="../index.html">calebng</a>\<em>about</em></div>
         </div>
         <div class="w-100"></div>
         <div class="col-sm-12 col-md-2">
           <nav class="nav flex-lg-column fixed">
-            <li class="nav-item"><a href="about.html" class="nav-link active">about</a></li>
-            <li class="nav-item"><a href="contact.html" class="nav-link active">contact</a></li>
-            <li class="nav-item"><a href="portfolio.html" class="nav-link disabled">portfolio</a></li>
+            <li class="nav-item"><a href="#" class="nav-link disabled">about</a></li>
           </nav>
         </div>
         <div class="col-sm-12 col-md-10">
           <div class="copy">
-            <p>caleb is a student of design. he studied <a href="#">architecture</a> at the singapore university of technology of design, but has tried to pursue his interest in <a href="#">graphic design</a> in his free time. he also <a href="#">draws</a> and takes <a href="#">photos</a>.</p>
+            <p>caleb graduated from the singapore university of technology and design with a bachelor of science in architecture in 2019. </p>
+            <p>as a person, he is interested in design as a whole, but tends to focus more on the visual aspect. he chose architecture as his major, because he wanted to challenge himself. </p>
+            <p>he was. and came out feeling rather defeated. </p>
           </div>
         </div>
       </div>
