fixed instagram link

--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
         </div>
         <div class="col-sm-12 col-md-10">
           <div class="copy">
-            <p>you can find caleb on <a href="instagram.com/calebnjw">instagram</a> mostly, but he recently purged his account. for more formal connections, you can <a href="mailto:calebnjw@outlook.com?Subject=Hello">email</a> him. calling is less ideal. </p>
+            <p>you can find caleb on <a href="http://instagram.com/calebnjw">instagram</a> mostly, but he recently purged his account. for more formal connections, you can <a href="mailto:calebnjw@outlook.com?Subject=Hello">email</a> him. calling is less ideal. </p>
           </div>
         </div>
       </div>
