--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
         </div>
         <div class="w-100"></div>
         <div class="col-sm-12 col-md-2">
-          <nav class="nav flex-lg-column fixed">
+          <nav class="nav flex-lg-column">
             <li class="nav-item"><a href="#" class="nav-link disabled">about</a></li>
           </nav>
         </div>
