--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
         </div>
         <div class="col-sm-12 col-md-10">
           <div class="copy">
-            <p>caleb graduated from the singapore university of technology and design with a bachelor of science in architecture in 2019. </p>
+            <p>caleb graduated from the <a href="https://www.sutd.edu.sg/">singapore university of technology and design</a> with a bachelor of science in architecture in 2019. </p>
             <p>as a person, he is interested in design as a whole, but tends to focus more on the visual aspect. he chose architecture as his major, because he wanted to challenge himself. </p>
             <p>he was. and came out feeling rather defeated. </p>
             <p></p>
