--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
         <div class="w-100"></div>
         <div class="col-sm-12 col-md-2">
           <nav class="nav flex-lg-column">
-            <li class="nav-item"><a href="#" class="nav-link disabled">contact</a></li>
+            <li class="nav-item">contact</li>
           </nav>
         </div>
         <div class="col-sm-12 col-md-10">
