--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <div class="w-100"></div>
         <div class="col-sm-12 col-md-2">
           <nav class="nav flex-lg-column">
-            <li class="nav-item"><a href="about.html" class="nav-link active">about</a></li>
-            <li class="nav-item"><a href="contact.html" class="nav-link active">contact</a></li>
+            <li class="nav-item"><a href="about.html" class="active">about</a></li>
+            <li class="nav-item"><a href="contact.html" class="active">contact</a></li>
             <li class="nav-item"><a href="portfolio.html" class="nav-link disabled">portfolio</a></li>
           </nav>
         </div>
