uploaded and linked to portfolio

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <nav class="nav flex-lg-column">
             <li class="nav-item"><a href="about.html" class="active">about</a></li>
             <li class="nav-item"><a href="contact.html" class="active">contact</a></li>
-            <li class="nav-item"><a href="portfolio.html" class="nav-link disabled">portfolio</a></li>
+            <li class="nav-item"><a href="files/portfolio_191010.pdf" class="nav-link">portfolio</a></li>
           </nav>
         </div>
         <div class="col-sm-12 col-md-10">
