--- a/blog.html
+++ b/blog.html
@@ -13,7 +13,7 @@ title: caleb ng — blog
         <h5 class="card-title">{{ post.title }}</h5>
         <p class="card-subtitle">{{ post.date | date_to_string }}</p>
         <p class="card-text">{{ post.excerpt }}</p>
-        <a href="{{post.url}}" class="btn btn-primary">read more</a>
+        <a href="{{post.url}}" class="btn btn-outline-primary">read more</a>
       </div>
     </div>
   </div>
