--- a/404.html
+++ b/404.html
@@ -1,10 +1,7 @@
 ---
-layout: default
+layout: single
 permalink: /404.html
 ---
-<div class="container">
-  <h1>404</h1>
+<h1>404</h1>
 
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
-</div>
+<p>The requested page could not be found.</p>
